--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "run-your-friend",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {},
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
+  },
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -37,6 +39,10 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
     "react-markdown": "^3.1.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
+    "redux-form-material-ui": "^4.3.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
