--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "mocha-webpack": "^1.0.1",
     "redux-devtools": "^3.4.1"
   },
   "dependencies": {
@@ -56,7 +59,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "mocha-webpack 'test/**/*.js'",
+    "testWatch": "mocha-webpack 'test/**/*.js' --watch"
   },
   "jest": {
     "collectCoverageFrom": [
