--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
     "mocha-webpack": "^1.0.1",
-    "redux-devtools": "^3.4.1"
+    "redux-devtools": "^3.4.1",
+    "sinon": "^4.1.2",
+    "sinon-chai": "^2.14.0"
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
