--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-dom": "^16.2.0",
     "react-markdown": "^3.1.0",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-form-material-ui": "^4.3.1",
