--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-share": "^1.18.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-form-material-ui": "^4.3.1",
